# photography-style-analysis

./: .gitignore  CHANGELOG.md  DATASET.md  DOCS.md  README.md  build.sh  pyproject.toml  requirements.txt  train_model.py
app/: app.py  bokeh.py
dataset/: dataset.csv
dataset/csv/: dataset.csv
dataset/csv/dof/: dof_test_dataset.csv  dof_train_dataset.csv  dof_valid_dataset.csv  (+1 more)
dataset/dataset-unlabelled/: dataset.csv  new_photos.csv  photos.csv
dataset/full/: nan.csv  test.csv  train.csv  valid.csv
dataset/horizontal/: nan_horizontal.csv  test_horizontal.csv  train_horizontal.csv  valid_horizontal.csv
dataset/vertical/: test_nan_vertical.csv  test_vertical.csv  train_vertical.csv  valid_vertical.csv
source/: train_model.py
source/architectures/: model_architectures.py
source/augmentation/: augmentation.py
source/computational_graph/: inference.py  training.py
source/configuration/: config.py  configuration.json
source/image_analysis/: im_analysis.py
source/preprocess/: tf_records.py
source/utils/: data_utils.py  download.py  gpu_util.py  plot_utils.py  train_utils.py  training_callbacks.py
src/architectures/: dense_net.py  lenet.py  model_architectures.py  simplenet.py  vgg_net.py
src/augmentation/: augmentation.py
src/computational_graph/: custom_callback.py  training.py
src/configuration/: config.py  configuration.json
src/image_analysis/: im_analysis.py
src/transformations/: augmentation.py  basic.py
src/utils/: data_utils.py  download.py  general_utils.py  gpu_util.py  plot_utils.py  train_utils.py  training_callbacks.py
(+18 files in other folders)
